Created Page Header component

--- a/src/pages/servicios/desarrollador-de-paginas-web.mdx
+++ b/src/pages/servicios/desarrollador-de-paginas-web.mdx
@@ -2,6 +2,10 @@
 layout: ../../layouts/MarkdownLayout.astro
 title: Desarrollo y creación de páginas web corporativas y personales
 description: ¿Necesitas un diseñador web que haga realidad tu proyecto? Éste servicio integral de diseño de páginas web es para ti.
+import PageHeader from "../components/page/PageHeader.astro"
 ---
 
-# Hola!
+
+<PageHeader
+  title="Portafolio"
+  description="An example of a portfolio using the Astro Content Collections."/>
